--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -137,16 +137,26 @@
         padding: 0;
     }
     .lot-detail-icon {
-        background: url(/static/img/lot-detail-legal.png);
+        background: url(/static/img/lot-detail-legal.png) no-repeat;
     }
 }
 
 .lot-detail-ownership {
     .lot-detail-right();
     .lot-detail-icon {
-        background: url(/static/img/lot-detail-ownership.png);
+        background: url(/static/img/lot-detail-ownership.png) no-repeat;
         height: 23px;
         width: 13px;
+    }
+}
+
+.lot-detail-special {
+    .lot-detail-right();
+    .lot-detail-icon {
+        background: url(/static/img/lot-detail-special.png) no-repeat;
+        height: 17px;
+        margin-left: 3px;
+        width: 5px;
     }
 }
 
