--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -307,6 +307,17 @@
             </div>
         </section>
 
+        <section class="lot-detail-special">
+            <div class="lot-detail-icon"></div>
+            <div class="lot-detail-content">
+                {% trans "Special Categories" %}:
+                <ul>
+                    <li>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
         {% if "lots.view_all_details" in perms %}
             <section>
                 <div class="lot-detail-content">
