Filter by sidelot

--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -87,6 +87,11 @@
                                         {% trans "remnant/odd shape" %}
                                         (<span id="public-remnant-count"></span>)
                                     </li>
+                                    <li class="map-filters-type-item map-filters-type-public-sidelot">
+                                        <input type="checkbox" name="public_sidelot" class="filter filter-layer hidden" checked="true" />
+                                        {% trans "side yard" %}
+                                        (<span id="public-sidelot-count"></span>)
+                                    </li>
                                 </ul>
                                 <ul>
                                     <li class="map-filters-type-item map-filters-type-private on">
