Side Yard filter on by default

--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -87,7 +87,7 @@
                                         {% trans "remnant/odd shape" %}
                                         (<span id="public-remnant-count"></span>)
                                     </li>
-                                    <li class="map-filters-type-item map-filters-type-public-sidelot">
+                                    <li class="map-filters-type-item map-filters-type-public-sidelot on">
                                         <input type="checkbox" name="public_sidelot" class="filter filter-layer hidden" checked="true" />
                                         {% trans "side yard" %}
                                         (<span id="public-sidelot-count"></span>)
