--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -134,6 +134,10 @@
         color: #8C474D;
     }
 
+    &-public-sidelot {
+        color: #A9746E;
+    }
+
     &-private {
         color: #D4A7D4;
     }
