--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -115,6 +115,11 @@
         margin-bottom: 5px;
         margin-top: 5px;
         padding: 0;
+
+        ul {
+            margin-top: 0;
+            margin-left: 15px;
+        }
     }
 
     &-item {
