--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -20,7 +20,7 @@
             <div class="popup-lot-details row">
                 <div class="col-xs-2">
                     <a target="_blank" href="{{detailUrl}}" class="btn btn-learn-more">learn<br />more</a>
-                    <a target="_blank" href="{{detailUrl}}" class="btn btn-learn-more">organize</a>
+                    <a target="_blank" href="{{detailUrl}}" class="btn btn-organize">organize</a>
                 </div>
                 <div class="col-xs-10">
                     {{#if feature.properties.organizers_count}}
