--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -181,20 +181,24 @@
         margin-top: 25px;
     }
 
-    .btn-learn-more {
+    .btn {
         background: #9D64A0;
         border-radius: 30px;
         color: white;
-        font-size: 10px;
+        font-size: 9px;
         height: 50px;
         padding: 0;
-        padding-top: 10px;
+        padding-top: 12px;
         text-align: center;
         width: 50px;
 
         &:last-child {
             margin-top: 15px;
         }
+    }
+
+    .btn-organize {
+        padding-top: 18px;
     }
 
     .organizers-count {
