Keep tagline centered vertically

--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -96,6 +96,9 @@ header .row {
         font-size: 12px;
         font-style: italic;
         line-height: 17px;
+        @media (min-width: @screen-lg-min) {
+            line-height: 35px;
+        }
     }
 }
 
