--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -3832,6 +3832,11 @@ header .row {
     width: 25%;
   }
 }
+@media (min-width: 1200px) {
+  .header-tagline {
+    line-height: 35px;
+  }
+}
 .navbar-default {
   position: relative;
   min-height: 1px;
