Make all menu items fit in menu

--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -108,7 +108,7 @@ header .row {
     .make-md-column(6);
     background-color: transparent;
     border: none;
-    font-size: 16px;
+    font-size: 12px;
     font-family: @header-font-family; 
     font-weight: bold;
     line-height: 26px;
@@ -123,8 +123,15 @@ header .row {
     font-weight: bold;
     line-height: 40px;
     padding: 5px;
+    padding-left: 8px;
+    padding-right: 8px;
     text-decoration: none;
     text-transform: uppercase;
+}
+
+.navbar-collapse.collapsing,
+.navbar-collapse.collapse.in {
+    font-size: 22px;
 }
 
 .navbar-brand {
