--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -3844,7 +3844,7 @@ header .row {
   padding-right: 15px;
   background-color: transparent;
   border: none;
-  font-size: 16px;
+  font-size: 12px;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: bold;
   line-height: 26px;
@@ -3878,8 +3878,14 @@ header .row {
   font-weight: bold;
   line-height: 40px;
   padding: 5px;
+  padding-left: 8px;
+  padding-right: 8px;
   text-decoration: none;
   text-transform: uppercase;
+}
+.navbar-collapse.collapsing,
+.navbar-collapse.collapse.in {
+  font-size: 22px;
 }
 .navbar-brand {
   float: none;
