Add search with django-watson

--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -4707,6 +4707,9 @@ form .btn-primary .badge {
 .lot-detail-page .modal .close:focus {
   outline: none;
 }
+.search-highlight {
+  font-weight: bold;
+}
 /*
  * Overrides
  */
