--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -318,6 +318,7 @@ form {
 @import "pages/blog.less";
 @import "pages/map.less";
 @import "pages/lot_detail.less";
+@import "pages/search.less";
 
 
 /*
