--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -4710,6 +4710,17 @@ form .btn-primary .badge {
 .search-highlight {
   font-weight: bold;
 }
+.search-results {
+  list-style: none;
+  padding-left: 0;
+}
+.search-results li {
+  margin-bottom: 25px;
+  margin-top: 25px;
+}
+.search-results a {
+  text-decoration: underline;
+}
 /*
  * Overrides
  */
