--- a/livinglotsla/static/css/pages/search.less
+++ b/livinglotsla/static/css/pages/search.less
@@ -1,3 +1,17 @@
 .search-highlight {
     font-weight: bold;
 }
+
+.search-results {
+    list-style: none;
+    padding-left: 0;
+
+    li {
+        margin-bottom: 25px;
+        margin-top: 25px;
+    }
+
+    a {
+        text-decoration: underline;
+    }
+}
