--- a/livinglotsla/templates/watson/includes/search_result_rsssync_rssentry.html
+++ b/livinglotsla/templates/watson/includes/search_result_rsssync_rssentry.html
@@ -1,3 +1,3 @@
 {% load search_tags %}
-<a href="{{ obj.get_absolute_url }}">{{ obj.title|highlight:query }}</a>:
+<a href="{{ obj.link }}">{{ obj.title|highlight:query }}</a>:
 {{ obj.summary|truncatequery:query|striptags|highlight:query|safe }}
