--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -3488,6 +3488,8 @@ button.close {
 .header-row:after,
 .footer-row:before,
 .footer-row:after,
+#page-wrapper:before,
+#page-wrapper:after,
 .blog-entry-list article:before,
 .blog-entry-list article:after,
 .map-filters-wrapper:before,
@@ -3515,6 +3517,7 @@ button.close {
 .modal-footer:after,
 .header-row:after,
 .footer-row:after,
+#page-wrapper:after,
 .blog-entry-list article:after,
 .map-filters-wrapper:after,
 .map-filters-inner-wrapper:after,
@@ -4056,7 +4059,9 @@ footer .row {
 .social-twitter:hover {
   background: url(/static/img/twitter-hover.jpg);
 }
-#page-wrapper.row {
+#page-wrapper {
+  margin-left: -15px;
+  margin-right: -15px;
   margin: 0;
   margin-bottom: 50px;
 }
