--- a/livinglotsla/templates/base.html
+++ b/livinglotsla/templates/base.html
@@ -29,7 +29,7 @@
 
             {% include "_header.html" %}
 
-            <div id="page-wrapper" class="row">
+            <div id="page-wrapper">
 
                 {% block pre_content %}{% endblock %}
 
