Same transition point for header and footer

--- a/livinglotsla/templates/_header.html
+++ b/livinglotsla/templates/_header.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="header-menu row">
-        <div class="col-sm-offset-1 col-sm-10">
+        <div class="col-md-offset-1 col-md-10">
             <div class="header-row">
                 <div class="header-tagline">
                     {% trans "Transforming vacant spaces into healthy places." %}
