--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -106,6 +106,9 @@ header .row {
         @media (min-width: @screen-lg-min) {
             line-height: 35px;
         }
+        &.overflowing {
+            line-height: 17px;
+        }
     }
 }
 
