--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -127,17 +127,23 @@ header .row {
     min-height: 0;
     padding-left: 0;
     padding-right: 0;
-}
 
-.navbar-default .navbar-nav > li > a {
-    color: black;
-    font-weight: bold;
-    line-height: 40px;
-    padding: 5px;
-    padding-left: 8px;
-    padding-right: 8px;
-    text-decoration: none;
-    text-transform: uppercase;
+    .navbar-nav > li > a {
+        color: black;
+        font-weight: bold;
+        line-height: 40px;
+        padding: 5px;
+        padding-left: 8px;
+        padding-right: 8px;
+        text-decoration: none;
+        text-transform: uppercase;
+    }
+    &.overflowing {
+        .navbar-nav > li > a {
+            padding-left: 4px;
+            padding-right: 4px;
+        }
+    }
 }
 
 .navbar-collapse.collapsing,
