--- a/livinglotsla/templates/_footer.html
+++ b/livinglotsla/templates/_footer.html
@@ -25,7 +25,7 @@
                     <a href="http://www.la2050.org/" target="_blank">LA 2050</a>
                 </div>
 
-                <div class="footer-subscribe">
+                <div class="footer-subscribe clearfix">
                     <form action="http://laopenacres.us7.list-manage2.com/subscribe/post?u=e1b2a93e34ac7e27fc741aaf8&amp;id=645ab10bfb" method="post" target="_blank">
                         <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" data-cip-id="mce-EMAIL" placeholder="{% trans "subscribe" %}">
                         <input style="background: none; float: right; width: 0; height: 0;" type="submit" />
