--- a/livinglotsla/templates/files/file_list.html
+++ b/livinglotsla/templates/files/file_list.html
@@ -25,13 +25,13 @@
                 <div class="admin-only">
 
                     {% if "files.change_file" in perms %}
-                        <a href="{% url "admin:files_file_change" file.pk %}" class="btn btn-small btn-warning">
+                        <a href="{% url "admin:files_file_change" file.pk %}" class="btn btn-admin">
                             {% trans "Edit this file" %}
                         </a>
                     {% endif %}
 
                     {% if "files.delete_file" in perms %}
-                        <a href="{% url "admin:files_file_delete" file.pk %}" class="btn btn-small btn-warning">
+                        <a href="{% url "admin:files_file_delete" file.pk %}" class="btn btn-admin">
                             {% trans "Delete this file" %}
                         </a>
                     {% endif %}
