--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -57,19 +57,23 @@
 
         <section class="lot-detail-actions">
             {% if "lots.change_lot" in perms %}
-                <a class="btn btn-admin" href="{% url "admin:lots_lot_change" lot.pk %}">
-                    {% trans "Edit this lot" %}
-                </a>
+                <div>
+                    <a class="btn btn-admin" href="{% url "admin:lots_lot_change" lot.pk %}">
+                        {% trans "Edit this lot" %}
+                    </a>
+                </div>
             {% endif %}
 
             {% if not lot.known_use %}
-                <a class="btn btn-default lot-page-tooltip" href="{% url "steward:add_stewardnotification" pk=lot.pk %}" data-toggle="tooltip" title="{% trans "Tell us more about your project." %}">
-                    {% trans "Is this an active project?" %}
-                </a>
+                <div>
+                    <a class="btn btn-default lot-page-tooltip" href="{% url "steward:add_stewardnotification" pk=lot.pk %}" data-toggle="tooltip" title="{% trans "Tell us more about your project." %}">
+                        {% trans "Is this an active project?" %}
+                    </a>
 
-                <a class="btn btn-default lot-page-tooltip" href="{% url "groundtruth:add_groundtruthrecord" pk=lot.pk %}" data-toggle="tooltip" title="{% trans "Let us know that this lot's actual use is not correctly identified." %}">
-                    {% trans "Have we made a mistake?" %}
-                </a>
+                    <a class="btn btn-default lot-page-tooltip" href="{% url "groundtruth:add_groundtruthrecord" pk=lot.pk %}" data-toggle="tooltip" title="{% trans "Let us know that this lot's actual use is not correctly identified." %}">
+                        {% trans "Have we made a mistake?" %}
+                    </a>
+                </div>
             {% endif %}
         </section>
 
