--- a/livinglotsla/templates/inplace/lots/lot_detail.html
+++ b/livinglotsla/templates/inplace/lots/lot_detail.html
@@ -66,7 +66,7 @@
 
             {% if not lot.known_use %}
                 <div>
-                    <a class="btn btn-default lot-page-tooltip" href="{% url "steward:add_stewardnotification" pk=lot.pk %}" data-toggle="tooltip" title="{% trans "Tell us more about your project." %}">
+                    <a class="btn btn-default" href="{% url "steward:add_stewardnotification" pk=lot.pk %}" data-target="#steward-modal" data-toggle="modal" title="{% trans "Tell us more about your project." %}">
                         {% trans "Is this an active project?" %}
                     </a>
 
@@ -404,6 +404,11 @@
         </div>
     </div>
     <div id="photo-modal" class="modal" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content"></div>
+        </div>
+    </div>
+    <div id="steward-modal" class="modal" role="dialog">
         <div class="modal-dialog modal-lg">
             <div class="modal-content"></div>
         </div>
