--- a/livinglotsla/templates/livinglots/groundtruth/add_groundtruthrecord_success.html
+++ b/livinglotsla/templates/livinglots/groundtruth/add_groundtruthrecord_success.html
@@ -1,4 +1,4 @@
-{% extends "livinglots/usercontent/base_success.html" %}
+{% extends "modals/success.html" %}
 {% load i18n %}
 
 {% block modal_header_text %}
