--- a/livinglotsla/templates/modals/success.html
+++ b/livinglotsla/templates/modals/success.html
@@ -1,14 +1,12 @@
+{% extends "modals/base.html" %}
 {% load i18n %}
 
-<div class="modal-header">
-    <button type="button" class="close btn-close-modal" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h1 class="modal-title">
-        {% block modal_header_text %}{% trans "Success" %}{% endblock %}<br />
-        {{ object.content_object.display_name|title|default:"unknown" }}
-    </h1>
-</div>
+{% block modal_header %}
+    {% block modal_header_text %}{% trans "Success" %}{% endblock %}<br />
+    {{ object.content_object.display_name|title|default:"unknown" }}
+{% endblock %}
 
-<div class="modal-body">
+{% block modal_body %}
     <div>
         {% block modal_body_text %}{% trans "Your content was added to" %}{% endblock %}
         {{ object.content_object.display_name|title|default:"unknown" }}
@@ -19,4 +17,4 @@
         </button>
     </form>
     <div class="clearfix"></div>
-</div>
+{% endblock %}
