--- a/livinglotsla/templates/livinglots/groundtruth/add_groundtruthrecord.html
+++ b/livinglotsla/templates/livinglots/groundtruth/add_groundtruthrecord.html
@@ -8,5 +8,23 @@
 
 {% block modal_body %}
     {% url "groundtruth:add_groundtruthrecord" pk=content_object.pk as action_url %}
-    {% include "_form.html" with form=form action=action_url %}
+    <form class="form-horizontal" method="post" 
+        {% if action_url %}action="{{ action_url }}"{% endif %}
+        >
+
+        {% include "forms/header.html" with form=form %}
+
+        <div class="row">
+            <div class="col-md-6">
+                {% include "forms/field.html" with field=form.actual_use %}
+            </div>
+            <div class="col-md-6">
+                {% include "forms/field.html" with field=form.contact_name %}
+                {% include "forms/field.html" with field=form.contact_email %}
+                {% include "forms/field.html" with field=form.contact_phone %}
+            </div>
+        </div>
+
+        {% include "forms/footer.html" %}
+    </form>
 {% endblock %}
